# PICAS-Staking

./: .gitignore  Makefile  README.md
contracts/: Cargo.toml
contracts/picas_token/src/: token_contract.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: constants.rs  entry_points.rs  helpers.rs  named_keys.rs  token_staking.rs
stake/: Makefile
stake/contracts/: Cargo.toml
stake/contracts/src/: constants.rs  entry_points.rs  helpers.rs  named_keys.rs  token_staking.rs
stake/tests/src/: erc20fixture.rs  integration_tests.rs  test_fixture.rs
stake/tests/wasm_artifacts/: picas_token.wasm  wcspr.wasm
